--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,10 @@
     <label for="url">Paste Mindful Chef Recipe URL:</label><br>
     <input type="url" id="url" name="url" required style="width:100%"><br><br>
     <button type="submit">Convert</button>
+    <button type="button" id="generate-static-btn">Generate Static URL</button>
   </form>
   <div id="output" class="result" style="display:none;"></div>
+  <div id="static-url-output" class="result" style="display:none;"></div>
   <script>
     document.getElementById('convert-form').onsubmit = async function(e) {
       e.preventDefault();
@@ -27,11 +29,16 @@
       output.style.display = 'none';
       output.innerHTML = 'Converting...';
       try {
-        const res = await fetch('/api/convert', {
+        const res = await fetch('http://localhost:4000/api/convert', {
           method: 'POST',
+          credentials: 'include',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ url })
         });
+        if (!res.ok) {
+          const text = await res.text();
+          throw new Error(`HTTP ${res.status}: ${text}`);
+        }
         const data = await res.json();
         if (data.html) {
           output.innerHTML = `<b>Copy this HTML into Recipe Keeper:</b><br><textarea readonly>${data.html}</textarea>`;
@@ -42,6 +49,44 @@
         output.innerHTML = `<span style='color:red'>${err.message}</span>`;
       }
       output.style.display = 'block';
+    };
+
+    document.getElementById('generate-static-btn').onclick = async function() {
+      const url = document.getElementById('url').value;
+      const staticOutput = document.getElementById('static-url-output');
+      staticOutput.style.display = 'none';
+      staticOutput.innerHTML = 'Generating static URL...';
+      try {
+        const res = await fetch('http://localhost:4000/api/generate-static', {
+          method: 'POST',
+          credentials: 'include',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ url })
+        });
+        if (!res.ok) {
+          const text = await res.text();
+          throw new Error(`HTTP ${res.status}: ${text}`);
+        }
+        const data = await res.json();
+        if (data.url) {
+          const fullUrl = window.location.origin + data.url;
+          staticOutput.innerHTML = `<b>Static Recipe URL:</b><br>
+            <input id='static-url-input' value='${fullUrl}' readonly style='width:90%'>
+            <button id='copy-static-url'>Copy</button>`;
+          document.getElementById('copy-static-url').onclick = function() {
+            const input = document.getElementById('static-url-input');
+            input.select();
+            document.execCommand('copy');
+            this.textContent = 'Copied!';
+            setTimeout(() => { this.textContent = 'Copy'; }, 1200);
+          };
+        } else {
+          staticOutput.innerHTML = `<span style='color:red'>${data.error || 'Unknown error'}</span>`;
+        }
+      } catch (err) {
+        staticOutput.innerHTML = `<span style='color:red'>${err.message}</span>`;
+      }
+      staticOutput.style.display = 'block';
     };
   </script>
 </body>
